# ai-video

./: .gitignore  CLAUDE.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/v1/: __init__.py
backend/app/core/: __init__.py  celery.py  config.py  database.py  exceptions.py  logging.py  redis.py  storage.py
backend/app/models/: __init__.py  base.py  character.py  content.py  dag.py  episode.py  lora.py  project.py  scene.py  script.py  storyboard.py  task.py  workflow.py
docs/: CLAUDE_AGENT_SDK.md  DEVELOPMENT_PROGRESS.md  PROJECT_PLAN.md
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: api.ts
